<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/list_imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/Nothing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/presence_audio_away" />

    <TextView
        android:id="@+id/list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/filename"
        android:textColor="#4C4A4A"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/list_imageView"
        app:layout_constraintTop_toTopOf="@+id/list_imageView" />

    <TextView
        android:id="@+id/list_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="@+id/list_imageView"
        app:layout_constraintStart_toEndOf="@+id/list_imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>